<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/actionbar_search_icon"
        android:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:title="@string/actionbar_search"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/actionbar_add_icon"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/actionbar_add"/>

    <item
        android:id="@+id/menu_group_chat"
        android:icon="@drawable/menu_group_chat_icon"
        android:title="@string/menu_group_chat"/>
    <item
        android:id="@+id/menu_addfrient"
        android:icon="@drawable/ic_menu_allfriends"
        android:title="@string/menu_addfrient"/>
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/men_scan_icon"
        android:title="@string/menu_scan"/>

    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/menu_feedback_icon"
        android:title="@string/menu_feedback"/>


</menu>