<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:coustom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <android.support.v4.view.ViewPager
       android:id="@+id/viewpager"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.xiang.weixin60.changColorWithText.ChangeColorIconWithText
            android:id="@+id/tab_chat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            coustom:iconBitmap="@drawable/ic_menu_start_conversation"
            coustom:bottomColor="#ff45c01a"
            coustom:text="@string/weixin"
            coustom:textSize="12sp"
            />
        <com.xiang.weixin60.changColorWithText.ChangeColorIconWithText
            android:id="@+id/tab_contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            coustom:iconBitmap="@drawable/ic_menu_friendslist"
            coustom:bottomColor="#ff45c01a"
            coustom:text="@string/tab_contact"
            coustom:textSize="12sp"
            />
        <com.xiang.weixin60.changColorWithText.ChangeColorIconWithText
            android:id="@+id/tab_found"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            coustom:iconBitmap="@drawable/ic_menu_emoticons"
            coustom:bottomColor="#ff45c01a"
            coustom:text="@string/tab_found"
            coustom:textSize="12sp"
            />
        <com.xiang.weixin60.changColorWithText.ChangeColorIconWithText
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            coustom:iconBitmap="@drawable/ic_menu_allfriends"
            coustom:bottomColor="#ff45c01a"
            coustom:text="@string/tab_me"
            coustom:textSize="12sp"
            />

    </LinearLayout>


</LinearLayout>
